--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,10 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 spring.flyway.baseline-on-migrate = true
+spring.flyway.baseline-version = 0
+
+#Used to show generated sql
+spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=update
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=update.sql
 
