--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.belier</groupId>
 	<artifactId>belier</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.1.0</version>
 	<packaging>war</packaging>
 	<name>belier</name>
 	<description>Admin belier</description>
