--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/belier
+spring.datasource.url=jdbc:mysql://localhost:3306/belier?sessionVariables=sql_mode=''
 spring.datasource.username=root
 spring.datasource.password=root
 
